--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "bootstrap": "^4.3.1",
     "bootstrap-vue": "^2.0.0-rc.27",
     "firebase": "^6.3.4",
+    "firestore-export-import": "^0.2.6",
+    "moment": "^2.24.0",
     "slugify": "^1.3.4",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1"
